--- a/desafio/estilo/style.css
+++ b/desafio/estilo/style.css
@@ -56,21 +56,40 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
 }
 
 section.imagem {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');    
+    
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(46, 46, 46, 0.253);
-    padding: 10px;
+    background-color: rgba(46, 46, 46, 0.5);
+    padding: 5px;
     border-radius: 10px;
+    text-shadow: 1px 1px 0px black;
 }
 
 footer {
